@@ -14,6 +14,9 @@ Important notes
 * Add file clisp.m4 so that the packages which use CLISP can check
   whether it is properly installed and has the required version.
 
+* POSIX:COPY-FILE now accepts :METHOD :HARDLINK-OR-COPY.
+  See <http://clisp.cons.org/impnotes/syscalls.html#copy-file> for details.
+
 * Bug fixes:
   + Better support of :START and :END arguments in NEW-CLX. [ 2159172 ]
   + Fix LOAD-LOGICAL-PATHNAME-TRANSLATIONS when *LOAD-PATHS* contains
